Last commit before release